[package]
name = "liberland-extension-runtime"
version = "1.0.0"
authors.workspace = true
description = "Liberland chain extension."
edition.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
log = { version = "0.4.17", default-features = false }

pallet-llm = { default-features = false, path = "../../substrate/frame/llm" }
pallet-assets = { default-features = false, path = "../../substrate/frame/assets" }
pallet-asset-conversion = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-asset-conversion/std",
	"pallet-assets/std",
	"pallet-contracts/std",
	"pallet-llm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
