[package]
name = "liberland-extension-runtime"
version = "1.0.0"
authors.workspace = true
description = "Liberland chain extension."
edition.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
frame-support = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
pallet-contracts = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
sp-std = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
frame-system = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }
log = { version = "0.4.17", default-features = false }

pallet-llm = { default-features = false, path = "../../substrate/frame/llm" }
pallet-assets = { default-features = false, path = "../../substrate/frame/assets" }
pallet-asset-conversion = { default-features = false, rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"pallet-contracts/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-system/std",
	"log/std",
	"pallet-llm/std",
	"pallet-assets/std",
	"pallet-asset-conversion/std",
]