[package]
name = "pallet-democracy"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for democracy"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
frame-support = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-std = { version = "5.0.0", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
log = { version = "0.4.17", default-features = false }
pallet-llm = { default-features = false, path = "../llm" }
pallet-identity = { path = "../identity", default-features = false }
pallet-liberland-initializer = { path = "../liberland-initializer", default-features = false}
liberland-traits = { path = "../liberland-traits", default-features = false}


[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
pallet-scheduler = { version = "4.0.0-dev", branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
pallet-preimage = { version = "4.0.0-dev", branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
pallet-assets = { version = "4.0.0-dev", branch = "polkadot-v0.9.43", git = "https://github.com/paritytech/substrate" }
pallet-nfts = { path = "../nfts" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-identity/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-llm/std",
	"pallet-nfts/std",
	"pallet-liberland-initializer/std",
	"liberland-traits/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-liberland-initializer/runtime-benchmarks",
	"liberland-traits/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-llm/try-runtime",
]
