[package]
name = "pallet-liberland-initializer"
version = "0.1.0"
description = "Liberland initialization pallet."
authors = ["Kacper Żuk"]
homepage = "https://liberland.org"
edition = "2021"
license = "MIT"
repository = "https://github.com/liberland/liberland_substrate"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-keyring = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
frame-benchmarking =  { git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401", default-features = false, optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", rev = "65a434a0ed474c14f692dcf9f69f8da66a99d401" }
pallet-identity = { default-features = false, path = "../identity" }
pallet-nfts = { default-features = false, path = "../nfts" }
pallet-registry = { default-features = false, path = "../registry" }
pallet-llm = { default-features = false, path = "../llm" }
pallet-assets = { default-features = false, path = "../assets" }
liberland-traits = { path = "../liberland-traits", default-features = false}

[dev-dependencies]

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"liberland-traits/std",
	"log/std",
	"pallet-assets/std",
	"pallet-identity/std",
	"pallet-llm/std",
	"pallet-nfts/std",
	"pallet-registry/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"liberland-traits/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-llm/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-registry/try-runtime",
]
